--- a/css/main.css
+++ b/css/main.css
@@ -10647,94 +10647,84 @@ fieldset:disabled .btn {
   }
 }
 
-.body {
-  background-color: #918a8a;
-}
-
-.dash-widget {
-  background-color: #918a8a;
-}
-
-.widget-inner {
-  padding: 10px;
-}
-
-.section-inner {
-  margin-top: 30px;
-}
-
-.flushBackground {
-  background-color: #918a8a;
-}
-
 .grid-container {
-  background-color: #ffffff;
   display: grid;
-  grid-gap: 20px;
-  padding: 20px;
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
+  grid-template-areas: 'header header header header header header' 'menu home home home home home' 'footer footer footer footer footer footer';
+  background-color: #22223d;
 }
 
-.grid-item {
-  background-color: rgba(245, 240, 240, 0.8);
-  text-align: center;
-  padding: 30px;
-  border-radius: 15px;
+.header {
+  grid-area: header;
+  background-color: #35355b;
+  text-decoration-color: white;
+}
+
+.footer {
+  grid-area: footer;
+}
+
+.menu {
+  grid-area: menu;
+  background-color: #35355b;
+}
+
+.home {
+  background-color: #35355b;
+  padding: 15px;
+}
+
+.home-dash {
+  padding: 10px;
+  grid-area: home;
+  display: grid;
+  grid-gap: 15px;
   box-shadow: 6px 6px 3px grey;
-}
-
-.card img {
-  width: 100px;
-  height: 100px;
-  align-items: center;
-  justify-content: center;
-}
-
-.text {
-  width: 300px;
-  height: 600px;
-  padding: 20px;
-  overflow: scroll;
+  text-align: left;
 }
 
 .item1 {
+  grid-column: 1 / 2;
   grid-row: 1;
 }
 
 .item2 {
+  grid-column: 2 / 3;
   grid-row: 1;
 }
 
 .item3 {
+  grid-column: 3 / 4;
   grid-row: 1;
 }
 
 .item4 {
-  grid-row: 1/  span 2;
+  grid-column: 4 / 5;
+  grid-row: 1;
 }
 
 .item5 {
+  grid-column: 1 /  3;
   grid-row: 2;
 }
 
 .item6 {
+  grid-column: 3 / 5;
   grid-row: 2;
 }
 
 .item7 {
-  grid-row: 2;
+  grid-column: 1;
+  grid-row: 3/ 5;
 }
 
 .item8 {
-  grid-row: 3 / 5;
-  grid-column: 1/ 3;
+  grid-column: 2 / 5;
+  grid-row: 3;
 }
 
 .item9 {
-  grid-row: 3 / 5;
-  grid-column: 3 / 5;
-}
-
-.item10 {
-  grid-column: 1 / 5;
-  grid-row: 5;
+  grid-column: 2 / 5;
+  grid-row: 4;
 }
