--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1,47 +1,160 @@
+$purple: #22223d;
+$light-purple: #30304d;
+$light-purple-500: #6464a8;
+$text-white: #dedefd;
+$white: #ffffff;
+$gray: #e7e5e5;
+$black: #151515;
+
+
+//DARK THEME
+
 .grid-container {
+  display: grid;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  grid-template-areas:
+'header header header header header header'
+'sidebar home home home home home'
+'footer footer footer footer footer footer';
+  background-color: $purple;
+}
+
+a {
+  text-decoration: none;
+  color: $text-white !important;
+}
+
+//HEADER
+.header {
+  grid-area: header;
+  background-color: $light-purple;
+  text-decoration-color: $text-white;
+}
+
+//HEADER END
+
+//SIDEBAR
+.sidebar {
+  grid-area: sidebar;
+  background-color: $light-purple;
+  text-decoration-color: $text-white;
+}
+//SIDEBAR END
+
+//HOME
+.home-dash {
+  padding: 10px;
+  grid-area: home;
+  display: grid;
+  grid-gap: 30px;
+  text-align: left;
+}
+
+.home {
+  background-color: $light-purple;
+  box-shadow: 1px 1px 1px white;
+  padding: 15px;
+  border-radius: 15px;
+  text-decoration: none;
+  color: $text-white;
+}
+
+//HOME END
+
+//FOOTER
+.footer {
+  grid-area: footer;
+  background-color: $purple;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+//FOOTER END
+
+//DARK THEME END
+
+
+
+
+
+
+//LIGHT THEME
+
+.dash-light-theme .grid-container {
+  background-color: $gray;
   display: grid;
   grid-column-gap: 15px;
   grid-row-gap: 15px;
   grid-template-areas:
 'header header header header header header'
-'menu home home home home home'
+'sidebar home home home home home'
 'footer footer footer footer footer footer';
-  background-color: #22223d;
 }
 
-.header {
+.dash-light-theme a {
+  text-decoration: none;
+  color: $black;
+}
+//HEADER
+
+.dash-light-theme .header {
   grid-area: header;
-  background-color: #35355b;
-  text-decoration-color: white;
+  background-color: $white;
+  text-decoration: none;
+  color: $black;
 }
 
-.footer {
-  grid-area: footer;
+//HEADER END
 
+
+//SIDEBAR
+.dash-light-theme .sidebar {
+  grid-area: sidebar;
+  background-color: $white;
+  border-radius: 15px;
+  text-decoration-color: $black;
 }
 
-.menu {
-  grid-area: menu;
-  background-color: #35355b;
-
+.dash-light-theme .sidebar a {
+  font-size: large;
+  font-weight: normal;
 }
+//SIDEBAR END
 
-.home {
-  background-color: #35355b;
 
+//HOME
+.dash-light-theme .home {
+  background-color: $white;
+  text-decoration-color: $black;
+  box-shadow: 1px 1px 1px white;
   padding: 15px;
+  border-radius: 15px;
+  color: black;
 }
 
-
-.home-dash {
-  padding: 10px;
-  grid-area: home;
-  display: grid;
-  grid-gap: 15px;
-  box-shadow: 6px 6px 3px grey;
-  text-align: left;
-
+.dash-light-theme .home a {
+  font-size: large;
 }
+//HOME END
+
+//FOOTER
+.dash-light-theme .footer {
+  grid-area: footer;
+  background-color: $white;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+//FOOTER END
+//LIGHT THEME END
+
+
+
+
+
+
+//WIDGETS
 
 .item1 {
   grid-column: 1 / 2;
@@ -82,7 +195,30 @@
   grid-column: 2 / 5;
   grid-row: 3;
 }
+
 .item9 {
-  grid-column: 2 / 5;
+  grid-column: 2 / 3;
   grid-row: 4;
 }
+
+.item10 {
+  grid-column: 3 / 4;
+  grid-row: 4;
+}
+
+.item11 {
+  grid-column: 4 / 5;
+  grid-row: 4;
+}
+
+.item12 {
+  grid-column: 1 / 3;
+  grid-row: 5;
+}
+
+.item13 {
+  grid-column: 3 / 5;
+  grid-row: 5;
+}
+
+//WIDGETS END
