--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -3,16 +3,17 @@ $light-purple: #30304d;
 $light-purple-500: #6464a8;
 $text-white: #eeeefa;
 $white: #ffffff;
-$gray: #e7e5e5;
+$light-gray: #e7e5e5;
 $black: #151515;
+$gray: #a2a2a2;
 
 
 //DARK THEME
 
 .grid-container {
   display: grid;
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
   grid-template-areas:
 'header header header header header header'
 'sidebar home home home home home'
@@ -20,11 +21,6 @@ $black: #151515;
   background-color: $purple;
 }
 
-.dark-a {
-  text-decoration: none;
-  color: $white!important;
-  text-decoration-color: $white!important;
-}
 
 //HEADER
 .header {
@@ -37,13 +33,16 @@ $black: #151515;
 .sidebar {
   grid-area: sidebar;
   background-color: $light-purple;
+  border-radius: 15px;
+  width: 280px;
 }
 
 //SIDEBAR END
 
 //HOME
-.table_text {
-  color: $white!important;
+.dynamicTextColorWhite {
+  //color: $white!important;
+  color: $text-white!important;
 }
 
 .home-dash {
@@ -55,12 +54,15 @@ $black: #151515;
 }
 
 .home {
-  background-color: $light-purple;
-  box-shadow: 1px 1px 1px white;
   padding: 15px;
   border-radius: 15px;
+  background-color: $light-purple;
   text-decoration: none;
-  color: $text-white;
+  box-shadow: 1px 1px 1px white;
+}
+
+.item12 a {
+  text-decoration: none;
 }
 
 //HOME END
@@ -68,7 +70,7 @@ $black: #151515;
 //FOOTER
 .footer {
   grid-area: footer;
-  background-color: $purple;
+  background-color: $light-purple;
   padding-top: 8px;
   padding-bottom: 8px;
 }
@@ -79,6 +81,7 @@ $black: #151515;
 
 a {
   color: $white!important;
+  text-decoration: none;
 }
 
 .dash-light-theme a {
@@ -87,27 +90,14 @@ a {
 
 //LIGHT THEME
 
-.light-a {
-  text-decoration: none;
-  color: $black!important;
-}
-
 .dash-light-theme .grid-container {
-  background-color: $gray;
-  display: grid;
-  grid-column-gap: 15px;
-  grid-row-gap: 15px;
-  grid-template-areas:
-'header header header header header header'
-'sidebar home home home home home'
-'footer footer footer footer footer footer';
+  background-color: $light-gray;
 }
 
 
 //HEADER
 
 .dash-light-theme .header {
-  grid-area: header;
   background-color: $white;
 }
 
@@ -117,9 +107,7 @@ a {
 
 //SIDEBAR
 .dash-light-theme .sidebar {
-  grid-area: sidebar;
   background-color: $white;
-  border-radius: 15px;
 }
 
 .dash-light-theme .sidebar a {
@@ -145,17 +133,14 @@ a {
 
 
 //HOME
-.dash-light-theme .table_text {
+.dash-light-theme .dynamicTextColorWhite {
   color: $black!important;
 }
 
 .dash-light-theme .home {
   background-color: $white;
   text-decoration-color: $black;
-  box-shadow: 1px 1px 1px white;
-  padding: 15px;
-  border-radius: 15px;
-  color: black;
+  box-shadow: 2px 2px 2px $gray;
 }
 
 .dash-light-theme .home a {
@@ -176,71 +161,3 @@ a {
 //LIGHT THEME END
 
 
-//WIDGETS
-
-.item1 {
-  grid-column: 1 / 2;
-  grid-row: 1;
-}
-
-.item2 {
-  grid-column: 2 / 3;
-  grid-row: 1;
-}
-
-.item3 {
-  grid-column: 3 / 4;
-  grid-row: 1;
-}
-
-.item4 {
-  grid-column: 4 / 5;
-  grid-row: 1;
-}
-
-.item5 {
-  grid-column: 1 /  3;
-  grid-row: 2;
-}
-
-.item6 {
-  grid-column: 3 / 5;
-  grid-row: 2;
-}
-
-.item7 {
-  grid-column: 1;
-  grid-row: 3/ 5;
-}
-
-.item8 {
-  grid-column: 2 / 5;
-  grid-row: 3;
-}
-
-.item9 {
-  grid-column: 2 / 3;
-  grid-row: 4;
-}
-
-.item10 {
-  grid-column: 3 / 4;
-  grid-row: 4;
-}
-
-.item11 {
-  grid-column: 4 / 5;
-  grid-row: 4;
-}
-
-.item12 {
-  grid-column: 1 / 3;
-  grid-row: 5;
-}
-
-.item13 {
-  grid-column: 3 / 5;
-  grid-row: 5;
-}
-
-//WIDGETS END
